--- a/BookLibrary.API/wwwroot/index.html
+++ b/BookLibrary.API/wwwroot/index.html
@@ -12,13 +12,24 @@
             <h1 class="display-4">Royal Library</h1>
             <p class="lead">Your favorite library :)</p>
             <hr class="my-4">
-            <label for="book">Book</label>
             <p class="lead">
+
+                <label for="searchBy">Search by</label>
+                <select class="form-control" id="searchBy">
+                    <option value="0">Select</option>
+                    <option value="1">Book title</option>
+                    <option value="2">Author</option>
+                    <option value="3">Type</option>
+                    <option value="4">Category</option>
+                    <option value="5">Available Now</option>
+                </select>
+
+                <label for="textFilterBook" class="mt-3">Keyword</label>
                 <input type="text" class="form-control" id="textFilterBook" aria-describedby="bookSearch" placeholder="Search here your book.">
-                <button  class="btn btn-dark btn-lg mt-3" onClick="search()" role="button">Search</button>
+                <button class="btn btn-dark btn-lg mt-3" onClick="search()" role="button">Search</button>
             </p>
         </div>
-        <table class="table table-dark" id="resultBooksTable">
+        <table class="table table-dark">
             <thead>
                 <tr>
                     <th scope="col">Book Title</th>
@@ -30,22 +41,7 @@
                     <th scope="col">Available Copies</th>
                 </tr>
             </thead>
-            <tbody>
-                <tr>
-                    <td>Mark</td>
-                    <td>Otto</td>
-                    <td>@mdo</td>
-                </tr>
-                <tr>
-                    <td>Jacob</td>
-                    <td>Thornton</td>
-                    <td>@fat</td>
-                </tr>
-                <tr>
-                    <td>Larry</td>
-                    <td>the Bird</td>
-                    <td>@twitter</td>
-                </tr>
+            <tbody id="resultBooksTable">
             </tbody>
         </table>
     </div>
